--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/server.js",
   "scripts": {
     "start": "node ./src/server.js",
-    "watch": "nodemon ./src/server.js"
+    "watch": "nodemon ./src/server.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.4.0",
     "mysql2": "^2.2.5"
   }
 }
